@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-30T08:11:09Z",
-  "count_outdated" : 1645,
-  "uniques_outdated" : 102,
-  "count" : 1693,
+  "timestamp" : "2022-06-30T16:10:03Z",
+  "count_outdated" : 1661,
+  "uniques_outdated" : 103,
+  "count" : 1702,
   "uniques" : 107,
   "views" : [
-    {
-      "timestamp": "2022-06-16T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 16 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 22,
