@@ -1,12 +1,7 @@
 {
-  "count": 48,
+  "count": 41,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-16T00:00:00Z",
-      "count": 7,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 22,
